# moxel

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-test.yaml  python-publish.yaml  python-versions.yaml
docs/: requirements.txt
docs/source/: .index.rst.swp  changelog.rst  changes.rst  cli.rst  conf.py  data.rst  index.rst  installation.rst  modules.rst  moxel.rst  tutorial.rst  usage.rst  utils.rst  visualize.rst
docs/source/_static/: custom.css
src/moxel/: __init__.py  __main__.py  _cli.py  _params.py  cli.py  data.py  lj_params.json  utils.py  visualize.py
tests/: .test_cli.py.swp  config.yaml  test__cli.py  test_cli.py  test_data.py  test_utils.py  test_visualize.py
tests/CIFs/: MnH28C26(N2Cl)2.json
tests/CIFs/bar/: corrupted_3.cif
tests/CIFs/foo/: corrupted_2.cif  foo.npy
tests/dummy_voxels/: clean_voxels.npy  voxels.npy
tests/toy_dataset/: clean_names.json  dummy.csv  names.json  train.json
