[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "moxel.__version__"}

[project]
name = "pymoxel"
dynamic = ["version"]

authors = [
  {name="Antonios P. Sarikas", email="antonios.sarikas@gmail.com"},
]

license = {text = "GPL-3.0-only"}
description = "Package for parallel calculation of energy voxels."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
	"matplotlib>=3.7.1",
	"numpy>=1.24.1",
	"pymatgen>=2023.5.10",
	"rich>=13.4.1",
]

[project.urls]
Homepage = "https://github.com/adosar/moxel"
Documentation = "https://moxel.readthedocs.io"
