[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pymoxel"
dynamic = ["version"]

authors = [
  {name="Antonios P. Sarikas", email="antonios.sarikas@gmail.com"},
]

license = {text = "GPL-3.0-only"}
description = "Package for parallel calculation of energy voxels."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
	"numpy==1.26.4",  # To avoid potential dependency conflicts.
	"jsonargparse[signatures]>=4.37.0",
	"pymatgen",
	"tqdm",
]

[project.urls]
Homepage = "https://github.com/adosar/moxel"
Documentation = "https://moxel.readthedocs.io"
Changelog = "https://moxel.readthedocs.io/en/stable/changelog.html"

[project.scripts]
moxel = "moxel._cli:moxel_cli"

[project.optional-dependencies]
docs = [
    "sphinx==7.3.7",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx-issues",
]
